--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -2,7 +2,17 @@
 @import url('https://fonts.googleapis.com/css?family=Courgette&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url('https://fonts.googleapis.com/css?family=Black+Ops+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Viga&display=swap');
 
+body{
+
+  background-color: rgba(37, 40, 41, 0.589);
+  background-image: url("https://www.sasiwallpaper.co.za/content/products/12586-black-brick/Black-Brick.jpg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+
+}
 
 .footer {
   /* position: fixed; */
@@ -11,7 +21,7 @@
   width: 100%;
   text-align: center;
   color: #5f6668 ;
-  background-color:#32383E ;
+  background-color:rgb(50, 56, 62) ;
   font-family: 'Courgette';
 }
 
@@ -22,7 +32,8 @@
   color: rgb(95, 102, 104) ;
   background-color:#32383E ;
   padding-bottom: 3%;
-  margin-bottom: 1%;
+  margin-bottom: 0%;
+  bottom: 0px;
 }
 
 .quote:hover {
@@ -237,6 +248,14 @@
   background-color:rgb(194, 4, 200) !important;
   color: rgb(255, 255, 255);
 }
+.buttons-color-default-page{
+  background-color:#ff1493 !important;
+  color: white;
+}
+.buttons-color-default-page:hover {
+  background-color:rgb(255, 255, 255) !important;
+  color: rgb(77, 72, 72);
+}
 
 .switch{
   height: 30px;
@@ -261,14 +280,15 @@
   overflow: hidden;
   width: 250px;
   height: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .losange {
-  transform: rotate(45deg) translateY(10px);
+  transform: rotate(180deg) translateY(10px);
 }
 .losange .los1 {
   width: 355px;
   height: 355px;
-  transform: rotate(-45deg) translateY(-74px);
+  transform: rotate(-160deg) translateY(74px);
 }
 .losange .los1 img {
   width: 100%;
@@ -307,9 +327,9 @@
 
 }
 .border-pink:hover{
-  border: 0.15rem solid rgb(54, 195, 238) !important;
+  border: 0.15rem solid rgba(37, 40, 41, 0.589) !important;
   box-shadow: 10px 10px 5px grey;
-  transition:  0.3s ease-in-out;
+  transition:  0.2s ease-in-out;
 }
 
 
@@ -325,3 +345,82 @@
   background: white;
   border-top: 0.01rem solid rgba(53, 53, 53, 0.603);
 }
+
+/* ======================={ Styling The 404 page:  }==================== */
+
+.fullpage{
+  background-image: url("https://i.pinimg.com/originals/d5/e6/63/d5e66302337d529100ebe0c527ffb31a.jpg"); 
+  background-color: #cccccc;
+  height: 500px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+
+/* ======================={ Styling The cart counter:  }==================== */
+
+.cartCounter{
+  font-family: 'Viga', sans-serif;
+  color:rgb(217, 238, 25);
+  font-size: large;
+}
+.cartCounter:hover{
+  font-family: 'Viga', sans-serif;
+  color: rgb(255, 20, 145);
+  font-size: large;
+}
+
+
+
+.changeBgByClickingSwitchBtn{
+  background-image: url("https://www.sasiwallpaper.co.za/content/products/12586-black-brick/Black-Brick.jpg");
+  background-position: 'center';
+  background-repeat: 'no-repeat';
+  background-size: 'cover';
+  background-attachment: 'fixed';
+}
+
+.whiteBg{
+  background-color: white;
+}
+
+.cart-subtotal{
+  background-color: rgba(31, 30, 30, 0.555);
+  border: 2px solid rgb(255, 20, 145);
+  border-radius: 25px ;
+  color: white !important;
+}
+
+/* ======================={ Removing the borders from Bootstrap cart table:  }==================== */
+
+.table-borderless > tbody > tr > td,
+.table-borderless > tbody > tr > th,
+.table-borderless > tfoot > tr > td,
+.table-borderless > tfoot > tr > th,
+.table-borderless > thead > tr > td,
+.table-borderless > thead > tr > th {
+    border: none;
+}
+
+/* ========================Navbar */
+
+.top-nav-collapse {
+  background-color: #0e0b0bf5 !important;
+}
+
+.navbar:not(.top-nav-collapse) {
+  background: #04050ab4 !important;
+} 
